# cwhttp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cwhttp/: CMakeLists.txt  Cookie.cpp  Cookie.h  CookieJar.cpp  CookieJar.h  FormBodyBuilder.cpp  FormBodyBuilder.h  Header.h  HeaderContainer.cpp  HeaderContainer.h  HttpClient.cpp  HttpClient.h  Method.h  Request.cpp  Request.h  RequestBody.cpp  RequestBody.h  RequestBuilder.cpp  RequestBuilder.h  Response.cpp  Response.h  ResponseBody.cpp  ResponseBody.h  ScopedCurl.cpp  ScopedCurl.h  ScopedSList.cpp  ScopedSList.h  StringRequestBody.cpp  StringRequestBody.h  StringResponseBody.cpp  StringResponseBody.h  StringUtils.cpp  StringUtils.h  UrlUtils.cpp  UrlUtils.h
cwhttp-test/: CMakeLists.txt  CookieTest.cpp  FormBodyBuilderTest.cpp  HeaderContainerTest.cpp  HttpClientTest.cpp  StringUtilsTest.cpp  UrlUtilsTest.cpp
cwlog/: CMakeLists.txt  Logger.cpp  Logger.h
examples/: CMakeLists.txt  ExampleGet.cpp  ExamplePostForm.cpp
